# Adam-Kaci-CPU-Design-and-Simulation-Project

./: AI_USAGE.md  README.md  ai_report.json  pyproject.toml
src/: alu.py  fcsr.py  fpu.py  gates.py  loader.py  main.py  mdu.py  memory.py  registers.py  runner.py  shifter.py  twos.py
src/AK_CPU_SD.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
tests/: test_alu.py  test_fcsr.py  test_fpu.py  test_mdu.py  test_mdu_divu_remu.py  test_mdu_mulh.py  test_registers.py  test_shifter.py  test_twos.py
tools/: gen_ai_report.py
