[tool.pytest.ini_options]
testpaths = ["tests"]

[project]
name = "AK-CPU-SD"
version = "0.1.0"
description = "Bit-accurate numeric operations core (twos-complement, RV32M, IEEE-754 f32) with traces"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["pytest>=9.0.1"]

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = ["main"]

[project.scripts]
SD-sim = "main:main"